--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FortHex</title>
+    <link rel="icon" href="data:image/svg+xml,<svg viewBox='0 0 384 384' xmlns='http://www.w3.org/2000/svg'><g transform='translate(0,384)scale(.075,.075)'><path fill='%23f1c40f' d='M1452-4473l-1102 636 0 1277 0 1277 1098 633c603 349 1104 634 1112 634 8 0 509-285 1113-633l1097-634 0-1277 0-1277-1093-631c-601-347-1099-633-1107-636-9-3-480 263-1118 631z m1552-167c234 135 425 248 426 252 0 10-863 839-871 836-21-8-868-833-862-839 20-19 859-499 869-496 7 1 203 112 438 247z m-3 1829c1216 1170 1508 1456 1497 1466-14 13-825 481-849 490-9 3-194-168-505-467-270-260-713-687-985-948-1341-1290-1550-1493-1542-1501 16-15 858-498 865-496 4 1 688 656 1519 1456z m1076-1209c230 133 422 245 426 249 10 10-1069 1054-1083 1049-5-2-165-153-354-335l-345-333 457-440c251-242 463-438 469-435 7 2 201 113 430 245z m501 1936l-3 476-490-471c-269-259-491-475-493-479-1-4 219-221 490-482l493-474 3 477c1 262 1 691 0 953z m-2529 18c187 181 341 332 341 336 0 6-218 218-832 808l-77 74-428-247c-235-135-432-250-436-254-8-8 1072-1053 1084-1049 4 2 160 151 348 332z'/></g></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&family=Geostar&display=swap" rel="stylesheet">
     <style>
@@ -422,6 +423,30 @@
         .modal-button-cancel:hover {
             background-color: #c0392b;
         }
+
+#loadOptionsContainer .action-button {
+    width: 100%;
+    padding: 12px 20px;
+    font-size: 1.1em;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 0;
+}
+#loadFromAutosaveButton {
+    background-color: #3498db;
+    box-shadow: 0 3px #2980b9;
+}
+#loadFromAutosaveButton:hover:not(:disabled) {
+    background-color: #2980b9;
+}
+#loadFromFileButton {
+    background-color: #27ae60;
+    box-shadow: 0 3px #1e8449;
+}
+#loadFromFileButton:hover:not(:disabled) {
+    background-color: #229954;
+}
 
         /* Tutorial Modal Styles */
         #tutorialModalOverlay {
@@ -843,6 +868,19 @@
         </div>
     </div>
 
+<div id="loadGameModal" class="modal-overlay" style="display: none;">
+    <div class="modal-content">
+        <h3 style="font-family: 'Geostar', cursive; font-size: 1.8em; color: #f1c40f; margin-bottom: 25px;">Load Game</h3>
+        <div id="loadOptionsContainer" style="display: flex; flex-direction: row; justify-content: center; gap: 20px;">
+            <button id="loadFromAutosaveButton" class="action-button">Load Autosave</button>
+            <button id="loadFromFileButton" class="action-button">Load Save File</button>
+        </div>
+    </div>
+</div>
+
+<!-- Hidden file input for loading game saves -->
+<input type="file" id="fileLoaderInput" style="display: none;" accept=".fhsave, .json">
+
     <div id="tutorialModalOverlay" style="display: none;"> <!-- Will be controlled by JS -->
         <div id="tutorialModalContent">
             <button id="tutorialCloseButton" class="tutorial-modal-close-button" title="Close Tutorial">×</button>
@@ -992,7 +1030,7 @@
 
     <script>
         // --- Game Configuration & Constants ---
-        const BUILD_VERSION = "B19";
+        const BUILD_VERSION = "B20";
         const HEX_SIZE = 70; 
         const GRID_RADIUS = 3; 
 
@@ -1294,6 +1332,10 @@
             t = Math.max(0, Math.min(1, t));
             const projection = { x: v.x + t * (w.x - v.x), y: v.y + t * (w.y - v.y) };
             return distSq(p, projection);
+        }
+
+        function padZero(num) {
+            return String(num).padStart(2, '0');
         }
 
         function isLand(tileType) {
@@ -4631,6 +4673,7 @@ function fundNewFortification(unit) {
             
             showInstruction(`Player ${gameState.currentPlayer}'s turn.`);
             logAction(`Player ${gameState.currentPlayer}'s Turn Begins`, gameState.currentPlayer);
+            autoSaveGame(true);
             checkVictoryCondition();
         });
 
@@ -4664,17 +4707,8 @@ ui.customConfirmOkButton.addEventListener('click', () => {
             }
         });
 
-    document.getElementById('saveGameButton').addEventListener('click', saveGameState);
-document.getElementById('loadGameButton').addEventListener('click', () => {
-    // Set the message and the action for the modal
-    document.getElementById('customConfirmMessage').textContent = 'Are you sure you want to load a saved game? Any unsaved progress will be lost.';
-    currentConfirmAction = loadGameState;
-
-    if (ui.customConfirmModal) {
-        ui.customConfirmModal.style.display = 'flex';
-        setTimeout(() => ui.customConfirmModal.classList.add('modal-visible'), 10);
-    }
-});
+document.getElementById('saveGameButton').addEventListener('click', saveGameToFile);
+document.getElementById('loadGameButton').addEventListener('click', showLoadGameModal);
 
         function handleGenerateNewMap() {
              gameState.isDragging = false; 
@@ -4684,7 +4718,7 @@ document.getElementById('loadGameButton').addEventListener('click', () => {
             showInstruction("New map generated. Player 1's Turn.", 3000);
         }
 
-function saveGameState() {
+function autoSaveGame(isSilent = false) {
     if (gameState.isDragging) {
         showInstruction("Cannot save while dragging a unit.", 2000);
         return;
@@ -4702,7 +4736,7 @@ function saveGameState() {
 
         const gameStateString = JSON.stringify(serializableState);
         localStorage.setItem('forthexSaveGame', gameStateString);
-        showInstruction("Game Saved!", 2000);
+        if (!isSilent) { showInstruction("Game Saved!", 2000); }
         console.log("Game state saved to localStorage.");
     } catch (error) {
         console.error("Error saving game state:", error);
@@ -4710,7 +4744,61 @@ function saveGameState() {
     }
 }
 
-function loadGameState() {
+function saveGameToFile() {
+    // --- Create the custom filename ---
+    const now = new Date();
+    const day = padZero(now.getDate());
+    const month = padZero(now.getMonth() + 1); // JS months are 0-indexed
+    const year = now.getFullYear();
+    const hours = padZero(now.getHours());
+    const minutes = padZero(now.getMinutes());
+    const seconds = padZero(now.getSeconds());
+    const fileName = `FortHexSaveGame-${day}.${month}.${year}-${hours}:${minutes}:${seconds}.fhsave`;
+
+    try {
+        // --- Serialize the game state (same as autosave) ---
+        const serializableState = { ...gameState };
+        serializableState.tiles = Array.from(gameState.tiles.entries());
+        serializableState.edges = Array.from(gameState.edges.entries());
+        serializableState.currentReachableMoves = Array.from(gameState.currentReachableMoves.entries());
+        serializableState.saveVersion = BUILD_VERSION;
+        const gameStateString = JSON.stringify(serializableState, null, 2); // Using indentation for readability
+
+        // --- Trigger the file download ---
+        const blob = new Blob([gameStateString], { type: 'application/json' });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = fileName;
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+        URL.revokeObjectURL(url);
+        showInstruction("Save file downloaded!", 2500);
+
+    } catch (error) {
+        console.error("Error saving game to file:", error);
+        showInstruction("Could not create save file. See console.", 3000);
+    }
+}
+
+function showLoadGameModal() {
+const modal = document.getElementById('loadGameModal');
+if (modal) {
+modal.style.display = 'flex';
+setTimeout(() => modal.classList.add('modal-visible'), 10);
+}
+}
+
+function hideLoadGameModal() {
+const modal = document.getElementById('loadGameModal');
+if (modal) {
+modal.classList.remove('modal-visible');
+setTimeout(() => modal.style.display = 'none', 300);
+}
+}
+
+function loadAutoSave() {
     const savedStateString = localStorage.getItem('forthexSaveGame');
     if (!savedStateString) {
         showInstruction("No saved game found.", 2000);
@@ -5165,6 +5253,67 @@ function fullGameRedraw() {
 
         window.onload = function () {
             document.getElementById('buildVersionDisplay').textContent = `FortHex Build ${BUILD_VERSION}`;
+                    // --- NEW: Confirmation Modal "Click Outside" Listener ---
+        const customConfirmModalOverlay = document.getElementById('customConfirmModal');
+        customConfirmModalOverlay.addEventListener('click', (event) => {
+            if (event.target === customConfirmModalOverlay) {
+                if (ui.customConfirmModal) {
+                    ui.customConfirmModal.classList.remove('modal-visible');
+                    setTimeout(() => ui.customConfirmModal.style.display = 'none', 300);
+                    currentConfirmAction = null; // Also cancel the pending action
+                }
+            }
+        });
+
+        // --- NEW: Load Game Modal Listeners ---
+        const loadGameModalOverlay = document.getElementById('loadGameModal');
+        loadGameModalOverlay.addEventListener('click', (event) => {
+            // If the click is on the overlay itself (the background), close the modal.
+            if (event.target === loadGameModalOverlay) {
+                hideLoadGameModal();
+            }
+        });
+
+        document.getElementById('loadFromAutosaveButton').addEventListener('click', () => {
+        if (localStorage.getItem('forthexSaveGame')) {
+            loadAutoSave();
+            hideLoadGameModal();
+        } else {
+            showInstruction("No autosave found.", 2000);
+        }
+    });
+
+    document.getElementById('loadFromFileButton').addEventListener('click', () => {
+        // Trigger the hidden file input
+        document.getElementById('fileLoaderInput').click();
+    });
+
+    document.getElementById('fileLoaderInput').addEventListener('change', (event) => {
+        const file = event.target.files[0];
+        if (!file) {
+            return; // User cancelled the dialog
+        }
+
+        const reader = new FileReader();
+        reader.onload = function(e) {
+            try {
+                const loadedState = JSON.parse(e.target.result);
+                if (loadedState.saveVersion !== BUILD_VERSION) {
+                    showInstruction("Save file is from an incompatible version.", 3000);
+                    return;
+                }
+                gameState = loadedState;
+                fullGameRedraw();
+                hideLoadGameModal();
+                showInstruction("Game loaded from file!", 2000);
+            } catch (error) {
+                console.error("Failed to load from file:", error);
+                showInstruction("Error: Invalid or corrupted save file.", 3000);
+            }
+        };
+        reader.readAsText(file);
+        event.target.value = null; // Reset the input so the same file can be loaded again
+    });
             const respawnChoicesDiv = document.getElementById('respawnChoices');
             if (respawnChoicesDiv) {
                 respawnChoicesDiv.addEventListener('click', (event) => {
