--- a/index.html
+++ b/index.html
@@ -1863,7 +1863,7 @@
 
     <script>
         // --- Game Configuration & Constants ---
-        const BUILD_VERSION = "B28//3";
+        const BUILD_VERSION = "B28//3c";
         const HEX_SIZE = 70; 
         const CANVAS_WIDTH_NORMAL = (2 * 3 + 1.5) * (HEX_SIZE * Math.sqrt(3));
         const CANVAS_HEIGHT_NORMAL = (2 * 3 + 1) * (HEX_SIZE * 2 * 0.75) + HEX_SIZE;
@@ -11576,7 +11576,7 @@ document.querySelectorAll('.swap-choice').forEach(btn => {
         }
     </script>
           
-<div id="buildVersionDisplay">FortHex Build B28//3</div>
+<div id="buildVersionDisplay">FortHex Build B28//3c</div>
 <div id="confettiContainer"></div>
 
 <div id="victoryInteractionBlocker" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1999; display: none; background-color: rgba(44, 62, 80, 0.4); -webkit-backdrop-filter: blur(3px); backdrop-filter: blur(3px); transition: background-color 0.5s ease, backdrop-filter 0.5s ease;"></div>
